Fix header blur on Safari

--- a/style/light.scss
+++ b/style/light.scss
@@ -40,6 +40,7 @@ body {
   header#quarto-header {
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 
     nav.navbar {
       background: linear-gradient(30deg, $gradient-from, $gradient-to);
